tests/cases/scc/error/0014-macro.c.res
./tests/cases/scc/error/0014-macro.c:10:1:	error:   too many arguments provided
exit code 1
